--- a/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
@@ -219,7 +219,7 @@
         <!--Hotel Airbnb Location Search Table View Controller-->
         <scene sceneID="LRf-PN-dsA">
             <objects>
-                <tableViewController storyboardIdentifier="HoteAirbnbLocationSearchTableVC" id="CdC-Hl-DSg" customClass="HotelAirbnbLocationSearchTableViewController" customModule="Va_cay" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="HotelAirbnbLocationSearchTableVC" id="CdC-Hl-DSg" customClass="HotelAirbnbLocationSearchTableViewController" customModule="Va_cay" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="nCs-p2-RLE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -448,65 +448,72 @@
                                 <rect key="frame" x="0.0" y="144" width="414" height="619.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="297" id="Hf2-aO-9K2" customClass="ItineraryTableViewCell" customModule="Va_cay" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="297"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itineraryCell" id="Hf2-aO-9K2" customClass="ItineraryTableViewCell" customModule="Va_cay" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="252"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hf2-aO-9K2" id="QPu-e8-g1F">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="297"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="252"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="B1V-Ws-r2O">
-                                                    <rect key="frame" x="84" y="29.5" width="246" height="238"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="nN1-zn-d8x">
+                                                    <rect key="frame" x="70" y="11" width="274" height="230"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="clw-Np-bkr">
-                                                            <rect key="frame" x="0.0" y="0.0" width="200" height="238"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qNH-IS-HKg">
+                                                            <rect key="frame" x="0.0" y="0.0" width="274" height="17.5"/>
                                                             <subviews>
-                                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dM6-Ji-NIt">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
-                                                                    <subviews>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkU-tw-SCw">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="170" height="30"/>
-                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                            <nil key="textColor"/>
-                                                                            <nil key="highlightedColor"/>
-                                                                        </label>
-                                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yJO-Mb-1gf">
-                                                                            <rect key="frame" x="170" y="0.0" width="30" height="30"/>
-                                                                            <constraints>
-                                                                                <constraint firstAttribute="width" secondItem="yJO-Mb-1gf" secondAttribute="height" multiplier="1:1" id="X1N-PY-cZD"/>
-                                                                            </constraints>
-                                                                            <color key="tintColor" systemColor="systemRedColor"/>
-                                                                            <state key="normal" title="Button" image="mappin.and.ellipse" catalog="system"/>
-                                                                        </button>
-                                                                    </subviews>
-                                                                </stackView>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZzS-IH-6TE">
-                                                                    <rect key="frame" x="0.0" y="38" width="200" height="200"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(destinationLabel)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkU-tw-SCw">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="230.5" height="17.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yJO-Mb-1gf">
+                                                                    <rect key="frame" x="234.5" y="0.0" width="18" height="17.5"/>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" secondItem="ZzS-IH-6TE" secondAttribute="height" multiplier="1:1" id="GBj-Kg-eIu"/>
-                                                                        <constraint firstAttribute="width" constant="200" id="Scb-gi-kQo"/>
-                                                                        <constraint firstAttribute="height" constant="200" id="VNX-98-ZIa"/>
+                                                                        <constraint firstAttribute="width" secondItem="yJO-Mb-1gf" secondAttribute="height" multiplier="1:1" id="X1N-PY-cZD"/>
                                                                     </constraints>
-                                                                </imageView>
+                                                                    <color key="tintColor" systemColor="systemRedColor"/>
+                                                                    <state key="normal" image="mappin.and.ellipse" catalog="system">
+                                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="20"/>
+                                                                    </state>
+                                                                </button>
+                                                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODo-JB-36o">
+                                                                    <rect key="frame" x="256.5" y="0.0" width="17.5" height="17.5"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" secondItem="ODo-JB-36o" secondAttribute="height" multiplier="1:1" id="ySa-qh-S7d"/>
+                                                                    </constraints>
+                                                                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <state key="normal" image="book.closed" catalog="system">
+                                                                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="20"/>
+                                                                    </state>
+                                                                </button>
                                                             </subviews>
-                                                            <constraints>
-                                                                <constraint firstAttribute="trailing" secondItem="dM6-Ji-NIt" secondAttribute="trailing" id="tYP-dB-WfQ"/>
-                                                            </constraints>
                                                         </stackView>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ODo-JB-36o">
-                                                            <rect key="frame" x="200" y="0.0" width="46" height="22"/>
-                                                            <state key="normal" title="Button" image="book.closed" catalog="system"/>
-                                                        </button>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4NX-qG-XJ4">
+                                                            <rect key="frame" x="43" y="41.5" width="188" height="188.5"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="4NX-qG-XJ4" secondAttribute="height" multiplier="1:1" id="BOK-xr-KxP"/>
+                                                            </constraints>
+                                                        </imageView>
                                                     </subviews>
+                                                    <color key="backgroundColor" red="0.79833179241784979" green="1" blue="0.92245668333726416" alpha="0.89803921568627454" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="qNH-IS-HKg" firstAttribute="width" secondItem="nN1-zn-d8x" secondAttribute="width" id="b0R-P3-imw"/>
+                                                    </constraints>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="B1V-Ws-r2O" firstAttribute="centerX" secondItem="QPu-e8-g1F" secondAttribute="centerX" id="Nlk-ef-zIv"/>
-                                                <constraint firstItem="B1V-Ws-r2O" firstAttribute="height" secondItem="QPu-e8-g1F" secondAttribute="height" multiplier="0.801262" id="PJd-HC-IoD"/>
-                                                <constraint firstItem="B1V-Ws-r2O" firstAttribute="centerY" secondItem="QPu-e8-g1F" secondAttribute="centerY" id="SLw-ZM-Pd9"/>
-                                                <constraint firstItem="B1V-Ws-r2O" firstAttribute="width" secondItem="QPu-e8-g1F" secondAttribute="width" multiplier="0.594203" id="t17-c0-ehy"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="nN1-zn-d8x" secondAttribute="trailing" constant="50" id="Kh3-Zd-HrY"/>
+                                                <constraint firstItem="nN1-zn-d8x" firstAttribute="leading" secondItem="QPu-e8-g1F" secondAttribute="leadingMargin" constant="50" id="NAr-N7-Ls3"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="nN1-zn-d8x" secondAttribute="bottom" id="W2A-9b-BnN"/>
+                                                <constraint firstItem="nN1-zn-d8x" firstAttribute="top" secondItem="QPu-e8-g1F" secondAttribute="topMargin" id="iNT-OU-tMA"/>
+                                                <constraint firstItem="nN1-zn-d8x" firstAttribute="centerY" secondItem="QPu-e8-g1F" secondAttribute="centerY" id="oO0-vc-b8r"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="destinationLabel" destination="kkU-tw-SCw" id="4Eb-dQ-s65"/>
+                                            <outlet property="tripImageView" destination="4NX-qG-XJ4" id="WFw-8m-FSL"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -547,6 +554,9 @@
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="eEC-Za-Vrv" id="gmf-Dh-0lF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zMq-tx-EfR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -803,12 +813,12 @@
             </objects>
             <point key="canvasLocation" x="2903" y="126"/>
         </scene>
-        <!--Hotel/Airbnb-->
+        <!--Navigation Controller-->
         <scene sceneID="xGK-EE-Yso">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KfE-um-73E" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Hotel/Airbnb" id="d7k-Bi-fSD"/>
+                    <navigationItem key="navigationItem" id="d7k-Bi-fSD"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="8UV-WA-iEO">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
