cleaned up map view UI on itinerary detail VC

--- a/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
@@ -381,6 +381,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="dUM-eD-HYN"/>
                     <connections>
+                        <outlet property="getCurrentLocationButton" destination="zwg-3P-euN" id="ruf-Ie-M3d"/>
                         <outlet property="mapView" destination="wVV-Cq-veG" id="vTF-qH-Imw"/>
                     </connections>
                 </viewController>
@@ -426,6 +427,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Y40-R8-sZ0"/>
                     <connections>
+                        <outlet property="getCurrentLocationButton" destination="2tS-MI-42F" id="tBr-Qg-ji5"/>
                         <outlet property="mapView" destination="Sby-Fv-cbC" id="pCJ-Ay-wux"/>
                     </connections>
                 </viewController>
@@ -587,14 +589,14 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itineraryCell" id="Hf2-aO-9K2" customClass="ItineraryTableViewCell" customModule="Va_cay" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="339"/>
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="341"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hf2-aO-9K2" id="QPu-e8-g1F">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="339"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="341"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="nN1-zn-d8x">
-                                                    <rect key="frame" x="70" y="11" width="274" height="317"/>
+                                                    <rect key="frame" x="70" y="11" width="274" height="319"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qNH-IS-HKg">
                                                             <rect key="frame" x="0.0" y="0.0" width="274" height="31.5"/>
@@ -636,7 +638,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4NX-qG-XJ4">
-                                                            <rect key="frame" x="6" y="55.5" width="262" height="261.5"/>
+                                                            <rect key="frame" x="5" y="55.5" width="264" height="263.5"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="4NX-qG-XJ4" secondAttribute="height" multiplier="1:1" id="BOK-xr-KxP"/>
                                                             </constraints>
